# reranked-rag-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.guardrails/: hub_registry.json
references/: agentic-rag-system-guide.md  agentic-rdbms-rag-guide.md  architecture.md  docker-demo-guide.md  docker-setup.md  guardrails-demo-guide.md  guardrails-setup.md  notes-on-guardrails.md  questions-to-test.md  reranking-rag-implementation-guide.md  streaming-setup.md
src/api/v1/agents/: agents.py
src/api/v1/routes/: query.py
src/api/v1/schema/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: tools.py
src/core/: db.py  guardrails.py
src/ingestion/: ingestion.py
