[project]
name = "RERANKING-RAG-SYSTEM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langgraph>=0.3.0",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.1",
    "pdfminer-six>=20260107",
    "pypdf>=6.9.2",
    "cohere>=5.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "streamlit>=1.9.0",
    "unstructured-inference>=1.5.3",
    "unstructured[pdf]>=0.22.6",
    "uvicorn>=0.42.0",
    "psycopg2-binary>=2.9.0",
    "guardrails-ai>=0.5.0",
    "langchain-mcp-adapters>=0.2.2",
]
